Changed /etc/default/tomcat reference to /etc/default/tomcat7 Removed the progman.baseUri and progman.locator settings for the ProgMan installation checklist page since they are not needed there